--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 <div class="container">
     <div class="row mt-5">
-      <div class="col-sm-6"><img src="images/yoga.png" class="img-fluid" alt="yoga app photo"></div>  
+      <div class="col-sm-6"><img src="images/yoga.png" class="img-fluid app-photo" alt="yoga app photo"></div>  
       <div class="col-sm-6">
         <h2>Yoga app</h2>
         <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
@@ -62,12 +62,14 @@
         <div class="col-sm-6 tex-left">
           <h2>Weather app</h2>
           <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-          <div class="mt-5"><a href="#" class="launch-links">launch weather app</a></div>
+          <div class="mt-5">
+            <a href="#" class="launch-links">launch weather app</a>
+          </div>
         </div>  
-        <div class="col-sm-6"><img src="images/weather.png" class="img-fluid" alt="weather app photo"></div> 
+        <div class="col-sm-6"><img src="images/weather.png" class="img-fluid app-photo" alt="weather app photo"></div> 
       </div>
       <div class="row mt-5">
-          <div class="col-sm-6"><img src="images/yogurt.png" class="img-fluid" alt="yogurt app photo"></div>  
+          <div class="col-sm-6"><img src="images/yogurt.png" class="img-fluid app-photo" alt="yogurt app photo"></div>  
           <div class="col-sm-6">
             <h2>Yogurt app</h2>
             <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
