--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Yoga app</h2>
         <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
         <div class="mt-5">
-        <a href="#" class="launch-links">launch yoga app</a>
+        <a href="#" class="launch-links text-center">launch yoga app</a>
       </div>  </div>
     </div>
     <div class="row mt-5">
@@ -63,7 +63,7 @@
           <h2>Weather app</h2>
           <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
           <div class="mt-5">
-            <a href="#" class="launch-links">launch weather app</a>
+            <a href="#" class="launch-links text-center">launch weather app</a>
           </div>
         </div>  
         <div class="col-sm-6"><img src="images/weather.png" class="img-fluid app-photo" alt="weather app photo"></div> 
@@ -73,7 +73,7 @@
           <div class="col-sm-6">
             <h2>Yogurt app</h2>
             <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-            <div class="mt-5"><a href="#" class="launch-links">launch yogurt app</a>
+            <div class="mt-5"><a href="#" class="launch-links text-center">launch yogurt app</a>
           </div> </div>  
         </div>
       </div>
